feat: complete redo

--- a/cmd/lambda-catalog-get/Makefile
+++ b/cmd/lambda-catalog-get/Makefile
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # Description: Makefile
 # Author(s): retgits <https://github.com/retgits/>
-# Last updated: 2019-11-14
+# Last updated: 2020-01-22
 # 
 # This software may be modified and distributed under the terms of the
 # MIT license. See the LICENSE file for details.
@@ -10,33 +10,27 @@
 ## The stage to deploy to
 stage         	:= dev
 
-## The name of the user in GitHub (also used as author in CloudFormation tags)
-github_user   	:= retgits
+## The name of the project
+project_name  	:= catalog-get
+
+## The author of the project
+author          := retgits
 
 ## The name of the team
 team			:= vcs
-
-## The name of the project, defaults to the name of the current directory
-project_name  	:= $(notdir $(CURDIR))
 
 ## The version of the project, either uses the current commit hash, or will default to "dev"
 version       	:= $(strip $(if $(shell git describe --tags --always --dirty="-dev"),$(shell git describe --tags --always --dirty="-dev"),dev))
 
 ## The Amazon S3 bucket to upload files to
-aws_bucket    	?= $$S3_BUCKET
-
-## The URL of Wavefront the Wavefront instance
-wavefront_url   ?= $$WAVEFRONTURL
-
-## The Token of Wavefront the Wavefront instance
-wavefront_token	?= $$WAVEFRONTTOKEN
+aws_bucket    	?= $$AWS_S3_BUCKET
 
 # Suppress checking files and all Make output
-.PHONY: help deps test build clean local deploy destroy
-.SILENT: help deps test build clean local deploy destroy
+.PHONY: help build vuln clean deploy destroy
+.SILENT: help build vuln clean deploy destroy
 
 # Targets
-help: ## Displays the help for each target (this message).
+help: ## Displays the help for each target (this message)
 	echo
 	echo Usage: make [TARGET]
 	echo
@@ -44,23 +38,14 @@ help: ## Displays the help for each target (this message).
 	grep -E '^[a-zA-Z_-]+:.*?## .*$$' Makefile | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 	echo
 
-deps: ## Get the Go modules from the GOPROXY
-	echo
-	echo Getting Go modules from: $(shell go env GOPROXY)
-	go get ./...
-	echo
-
-test: ## Run all unit tests and print coverage
-	echo
-	go test -cover ./...
-	snyk test
-	echo
-
 build: ## Build the executable for Lambda
 	echo
-	GOOS=linux GOARCH=amd64 go build -o bin/create ./create
-	GOOS=linux GOARCH=amd64 go build -o bin/allproducts ./allproducts
-	GOOS=linux GOARCH=amd64 go build -o bin/getproduct ./getproduct
+	GOOS=linux GOARCH=amd64 go build -o ./bin/lambda-catalog-get .
+	echo
+
+vuln: ## Scans the Go.mod file for known vulnerabilities using Snyk.
+	echo
+	snyk test --file=../../go.mod
 	echo
 
 clean: ## Remove all generated files
@@ -69,12 +54,7 @@ clean: ## Remove all generated files
 	-rm packaged.yaml
 	echo
 
-local: ## Run SAM to test the Lambda function using Docker
-	echo
-	sam local start-api
-	echo
-
-deploy: clean build ## Deploy the app to AWS Lambda
+deploy: ## Deploy the app to AWS Lambda
 	echo
 	aws cloudformation package --template-file template.yaml --output-template-file packaged.yaml --s3-bucket $(aws_bucket)
 	aws cloudformation deploy \
@@ -82,10 +62,9 @@ deploy: clean build ## Deploy the app to AWS Lambda
 		--stack-name $(project_name)-$(stage) \
 		--capabilities CAPABILITY_IAM \
 		--parameter-overrides Version=$(version) \
-		User=$(github_user) \
+		Author=$(author) \
 		Team=$(team) \
-		WavefrontURL=$(wavefront_url) \
-		WavefrontToken=$(wavefront_token)
+		Version=$(version)
 	aws cloudformation describe-stacks --stack-name $(project_name)-$(stage) --query 'Stacks[].Outputs'
 	echo
 
