chore: enable cors

--- a/deploy/cloudformation/lambda-template.yaml
+++ b/deploy/cloudformation/lambda-template.yaml
@@ -20,6 +20,11 @@ Parameters:
     Type: String
     Default: dev
 
+Globals:
+  Api:
+    Cors:
+      AllowOrigin: "'*'"
+
 ## Specifies the stack resources and their properties.
 Resources:
   AllProducts:
