fix: comment local dynamo URL

--- a/deploy/cloudformation/lambda-template.yaml
+++ b/deploy/cloudformation/lambda-template.yaml
@@ -27,7 +27,7 @@ Globals:
       Variables:
         TABLE: !Sub "${Feature}-${Stage}"
         REGION: !Ref AWS::Region
-        DYNAMO_URL: http://host.docker.internal:8000 ## Uncomment this property to be able to test locally using DynamoDB local 
+        #DYNAMO_URL: http://host.docker.internal:8000 ## Uncomment this property to be able to test locally using DynamoDB local 
   Api:
     Cors:
       AllowOrigin: "'*'"
