feat: add sentry tracing

--- a/deploy/cloudformation/lambda-template.yaml
+++ b/deploy/cloudformation/lambda-template.yaml
@@ -19,6 +19,9 @@ Parameters:
   Stage:
     Type: String
     Default: dev
+  SentryDSN:
+    Type: AWS::SSM::Parameter::Value<String>
+    Default: /Sentry/Dsn
 
 ## Specifies properties that are common to all your serverless functions, APIs, and simple tables.
 Globals:
@@ -28,6 +31,9 @@ Globals:
         TABLE: !Sub "${Feature}-${Stage}"
         REGION: !Ref AWS::Region
         #DYNAMO_URL: http://host.docker.internal:8000 ## Uncomment this property to be able to test locally using DynamoDB local 
+        VERSION: !Ref Version
+        STAGE: !Ref Stage
+        SENTRY_DSN: !Ref SentryDSN
   Api:
     Cors:
       AllowOrigin: "'*'"
@@ -49,6 +55,9 @@ Resources:
         - AWSLambdaRole
         - DynamoDBCrudPolicy:
             TableName: !Sub "${Feature}-${Stage}"
+      Environment:
+        Variables:
+          FUNCTION_NAME: AllProducts
       Events:
         AllProductsAPI:
           Type: Api
@@ -83,6 +92,9 @@ Resources:
         - AWSLambdaRole
         - DynamoDBCrudPolicy:
             TableName: !Sub "${Feature}-${Stage}"
+      Environment:
+        Variables:
+          FUNCTION_NAME: GetProduct
       Events:
         GetProductAPI:
           Type: Api
@@ -117,6 +129,9 @@ Resources:
         - AWSLambdaRole
         - DynamoDBCrudPolicy:
             TableName: !Sub "${Feature}-${Stage}"
+      Environment:
+        Variables:
+          FUNCTION_NAME: CreateProduct
       Events:
         CreateProductAPI:
           Type: Api
