--- a/pulumi/Pulumi.yaml
+++ b/pulumi/Pulumi.yaml
@@ -12,8 +12,8 @@ template:
           description: The DSN to connect to Sentry
         region:
           description: The AWS region to deploy into
-        sentrydsn:
-          description: The DSN to connect to Sentry
+        accountid:
+          description: Your AWS Account ID
       awsconfig:tags:
         author:
           description: The author, you...
