--- a/pulumi/Pulumi.yaml
+++ b/pulumi/Pulumi.yaml
@@ -5,13 +5,9 @@ template:
   config:
       aws:region:
         description: The AWS region to deploy into
-      awsconfig:lambda:
-        dynamoarn: 
-          description: The ARN to the DynamoDB table
+      awsconfig:generic:
         sentrydsn:
           description: The DSN to connect to Sentry
-        region:
-          description: The AWS region to deploy into
         accountid:
           description: Your AWS Account ID
       awsconfig:tags:
@@ -24,4 +20,4 @@ template:
           description: The team you're on
         version:
           description: The version
-          default: 0.1.0
+          default: 0.2.0
